// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all locations query should return successful searches - changed order 1`] = `
Object {
  "data": Object {
    "A": null,
    "B": Object {
      "edges": Array [
        Object {
          "node": Object {
            "name": "Prague",
          },
        },
        Object {
          "node": Object {
            "name": "Václav Havel Airport Prague",
          },
        },
        Object {
          "node": Object {
            "name": "Central Europe",
          },
        },
        Object {
          "node": Object {
            "name": "Europe",
          },
        },
      ],
    },
  },
  "errors": Array [
    [GraphQLError: Location has not been found.],
  ],
}
`;

exports[`all locations query should return successful searches 1`] = `
Object {
  "data": Object {
    "A": Object {
      "edges": Array [
        Object {
          "node": Object {
            "name": "Prague",
          },
        },
        Object {
          "node": Object {
            "name": "Václav Havel Airport Prague",
          },
        },
        Object {
          "node": Object {
            "name": "Central Europe",
          },
        },
        Object {
          "node": Object {
            "name": "Europe",
          },
        },
      ],
    },
    "B": null,
  },
  "errors": Array [
    [GraphQLError: Location has not been found.],
  ],
}
`;
